--- a/portfolio/src/app/profile/education/education.component.html
+++ b/portfolio/src/app/profile/education/education.component.html
@@ -65,15 +65,10 @@
           </div>
           <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Bachelor of Engineering</div>
-               <h4 class="category">Aditya Silver Oak Institute Of Technology
+              <div class="h5">Lycee Technique Mohammedia</div>
+               <h4 class="category">Technical technology mechanic
                </h4>
-               <ul>
-                <li> Aditya Silver Oak Institute is GTU Affiliated and <b>ranks 7th</b> in Gujurat </li>
-                    <li>Completed B.E in Computer Engineering with <b>9.54 CGPA</b>.</li>
-                 <li>Won the <b>Best Student Award</b> 3 times for excellent Academic records at College.</li>
-                 <li>Maintained above <b>9.1 spi</b> in every semester of college academic .</li>
-             </ul>
+              
             </div>
           </div>
         </div>
